--- a/Bazis MADI/Base.lproj/Main.storyboard
+++ b/Bazis MADI/Base.lproj/Main.storyboard
@@ -436,15 +436,15 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="password-1" translatesAutoresizingMaskIntoConstraints="NO" id="p5q-Jw-oo8">
-                                <rect key="frame" x="19" y="353" width="39" height="38"/>
+                                <rect key="frame" x="19" y="353" width="38" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Password" translatesAutoresizingMaskIntoConstraints="NO" id="jc2-zd-s8b">
-                                <rect key="frame" x="19" y="429" width="39" height="38"/>
+                                <rect key="frame" x="19" y="429" width="38" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Password" translatesAutoresizingMaskIntoConstraints="NO" id="59w-cC-TVj">
-                                <rect key="frame" x="19" y="485" width="39" height="38"/>
+                                <rect key="frame" x="19" y="485" width="38" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eun-7C-amb" customClass="InputButton1UIButton" customModule="Bazis_MADI" customModuleProvider="target">
@@ -455,6 +455,18 @@
                                     <action selector="ChangedPaswordButton:" destination="lhV-Bo-g98" eventType="touchUpInside" id="1hY-af-iEQ"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="noPsw" translatesAutoresizingMaskIntoConstraints="NO" id="fbk-hi-hzU">
+                                <rect key="frame" x="357" y="360" width="24" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="noPsw" translatesAutoresizingMaskIntoConstraints="NO" id="x6L-dr-h4d">
+                                <rect key="frame" x="359" y="440" width="24" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="noPsw" translatesAutoresizingMaskIntoConstraints="NO" id="u86-fK-HAw">
+                                <rect key="frame" x="359" y="492" width="24" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -466,8 +478,12 @@
                         <viewLayoutGuide key="safeArea" id="tj0-KV-ehC"/>
                     </view>
                     <connections>
+                        <outlet property="changedPswButton" destination="eun-7C-amb" id="pN7-8l-fZY"/>
                         <outlet property="conformNewPswTextField" destination="iI6-pv-qH6" id="gtq-jq-UB8"/>
                         <outlet property="errorMessLabel" destination="wc5-tT-Iy0" id="9IM-04-ftX"/>
+                        <outlet property="imgConform" destination="u86-fK-HAw" id="4sD-hJ-K7r"/>
+                        <outlet property="imgNew" destination="x6L-dr-h4d" id="D3S-hS-txw"/>
+                        <outlet property="imgOld" destination="fbk-hi-hzU" id="uJl-Rm-HM0"/>
                         <outlet property="newPswTextField" destination="jb0-Gh-uDX" id="IPm-3B-sst"/>
                         <outlet property="oldPswTextField" destination="vK9-MX-DLi" id="f4t-3O-dVA"/>
                     </connections>
@@ -846,6 +862,7 @@
         <image name="edit" width="512" height="512"/>
         <image name="fon" width="810" height="809"/>
         <image name="home" width="30" height="30"/>
+        <image name="noPsw" width="380" height="380"/>
         <image name="password-1" width="80" height="96"/>
         <image name="portfolio" width="512" height="512"/>
         <image name="statistic" width="512" height="512"/>
